# Diabetes-Risk

./: README.md  app.py  pds_oep.py  pyproject.toml  requirements.txt
static/: app.js  styles.css
templates/: index.html
