[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes-risk-oep"
version = "1.0.0"
description = "Flask web app for diabetes risk prediction presentation"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "flask==3.1.0",
  "gunicorn==23.0.0",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scikit-learn==1.4.2",
]

[tool.setuptools]
py-modules = ["app"]
